--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,20 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile "org.springframework:spring-test:$springVersion"
+
+    compile ("org.springframework:spring-context:$springVersion") {
+        exclude group: "commons-logging", module: "commons-logging"
+    }
+    compile "org.springframework:spring-context-support:$springVersion"
 
     compile "ch.qos.logback:logback-classic:1.1.2"
     compile "org.slf4j:jcl-over-slf4j:1.7.7"
     compile "org.logback-extensions:logback-ext-spring:0.1.2"
 
-    compile "javax.mail:mail:1.4.7"
+    compile "org.controlsfx:controlsfx:8.20.8"
+
+    compile "javax.mail:javax.mail-api:1.5.2"
 }
 
 javafx {
