--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ application.name=\u0426\u0435\u043D\u0442\u0440 \u0417\u0430\u043F\u0440\u0430\u
 ## mail props
 mail.username=czkappmailer@gmail.com
 mail.password=czkflyapp
+mail.toEmail=czkappmailer@gmail.com
